# raptor-rs

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs  request.rs
api/templates/: index.html
benchmark/: Cargo.toml
benchmark/benches/: benchmark.rs
gtfs2sql/: Cargo.toml  README.md
gtfs2sql/src/: main.rs
gtfs2sql/src/sql/: create_database_query.rs  create_tables.sql  create_tables_queries.rs  mod.rs  queries.rs  structs.rs  time.rs
raptor/: Cargo.toml
raptor/src/: data.rs  lib.rs  shared.rs
sql2raptor/: Cargo.toml
sql2raptor/src/: lib.rs
src/: data.rs  main.rs  raptor.rs
