[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { workspace = true }
raptor = { path = "../raptor" }

# For HTML templating
askama = "0.12.1"
askama_axum = "0.4.0"
# Web server framework
axum = "0.7.5"
# For logging and telemetry to get better insights into what is going on inisde the app
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Useful macros to make implementing errors easier
thiserror = "1.0.61"
# Async runtime
tokio = { version = "1.37.0", features = ["full"] }
libsql = { workspace = true }
# Tokio utilities like file system access
tower-http = { version = "0.5.2", features = ["fs"] }
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
