[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false